# djust

./: .gitignore  .pipeline-status.md  .pre-commit-config.yaml  .secrets.baseline  ACTOR_STATE_MANAGEMENT.md  AGENTS.md  API_REFERENCE.md  BREADCRUMB_COMPONENT_SUMMARY.md  CHANGELOG.md  CHANGELOG_v0.3.md  CLAUDE.md  COMPONENTS.md  COMPONENT_EXAMPLES.md  COMPONENT_MIGRATION_GUIDE.md  COMPONENT_UNIFIED_DESIGN.md  CONTRIBUTING.md  CSS_FEATURE_COMPLETE.md  CSS_FRAMEWORK_IMPROVEMENTS.md  CSS_SUPPORT_IMPLEMENTATION.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_PROCESS.md  DIVIDER_COMPONENT_SUMMARY.md  DOCUMENTATION_AUDIT_COMPLETE.md  Dockerfile  HTTP_MODE_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LISTGROUP_IMPLEMENTATION_SUMMARY.md  LIVECOMPONENT_ARCHITECTURE.md  MIGRATION.md  MIGRATION_v0.2_to_v0.3.md  MONETIZATION.md  MULTI_TENANT_COMPLETE.md  Makefile  Monetization-gemini.md  NAMING_CONVENTION_PROPOSAL.md  NAVBAR_QUICK_START.md  (+58 more)
.claude/: AUTOMATION_QUICKSTART.md  EXAMPLE_MARKDOWN_USAGE.md  HOW_IT_WORKS.md  MARKDOWN_SPECS.md  YAML_TO_CODE.md  feature_config.yaml
.claude/commands/: respond.md  review-save.md
.claude/features/: example-jit-serialization.yaml
.claude/responses/: README.md  index.md
.claude/reviews/: README.md  index.md
.claude/sessions/: feature-dev-20251116-235253.md  feature-dev-20251118-130849.md  feature-dev-20251118-133708.md  feature-dev-20251118-144215.md
.claude/skills/: pr-response.md  pr-reviewer.md
.github/: SECURITY_AUDIT_TEMPLATE.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.pipeline-templates/: README.md  bugfix-state.json  feature-state.json  ship-state.json
.semgrep/: djust-security.yaml
.serena/: project.yml
benchmarks/: benchmark.py  benchmark_all_methods.py  benchmark_apples_to_apples.py  benchmark_complex_components.py  benchmark_complex_rust.py  benchmark_components.py  benchmark_components_simple.py  benchmark_memory_usage.py  benchmark_pure_rust_proper.py  benchmark_rust_object_overhead.py  benchmark_scaling_complexity.py  benchmark_template_cache.py
branding/: README.md
crates/django_rust_live/: Cargo.toml
crates/django_rust_live/src/: lib.rs
crates/django_rust_templates/: Cargo.toml
crates/django_rust_templates/src/: filters.rs  lexer.rs  lib.rs  parser.rs  renderer.rs
crates/django_rust_vdom/: Cargo.toml  TESTING.md
crates/django_rust_vdom/src/: diff.rs  lib.rs  parser.rs  patch.rs  template.rs
crates/django_rust_vdom/tests/: integration_test.rs
crates/djust_components/: Cargo.toml
crates/djust_components/src/: html.rs  lib.rs  python.rs
crates/djust_components/src/simple/: alert.rs  avatar.rs  divider.rs  icon.rs  modal.rs  progress.rs  range.rs  switch.rs  textarea.rs  tooltip.rs
crates/djust_components/src/ui/: alert.rs  button.rs  card.rs  column.rs  container.rs  dropdown.rs  input.rs  mod.rs  modal.rs  row.rs  tabs.rs  text.rs
crates/djust_live/: Cargo.toml
crates/djust_live/src/: lib.rs  model_serializer.rs
crates/djust_live/src/actors/: component.rs  error.rs  messages.rs  mod.rs  session.rs  supervisor.rs  view.rs
docs/: AI_WORKFLOW_PROCESS.md  API_STABILITY.md  BEST_PRACTICES_AI.md  DEBUG_PANEL.md  DEBUG_PANEL_VISION.md  DEVELOPER_TOOLING_PLAN.md  DX_ISSUES.md  ENTERPRISE.md  EVENT_HANDLERS.md  FRAMEWORK_COMPARISON.md  FUTURE_CONSIDERATIONS.md  HANDLER_EXCEPTION_DETECTION.md  IMPLEMENTATION_PHASE1.md  IMPLEMENTATION_PHASE2.md  IMPLEMENTATION_PHASE3.md  IMPLEMENTATION_PHASE5.md  JIT_SERIALIZATION_PATTERN.md  MARKETING.md  MARKETING_NEXT_STEPS.md  MONETIZATION_ACTION_PLAN.md  MONETIZATION_STRATEGY.md  PERFORMANCE_ANALYSIS.md  PULL_REQUEST_CHECKLIST.md  README.md  README_MARKETING_SECTION.md  REFACTORING_OPPORTUNITIES.md  RUST_COMPONENTS.md  RUST_TEMPLATE_API.md  SECURE_DEFAULTS.md  SECURITY_GUIDELINES.md  STATE_MANAGEMENT_API.md  STATE_MANAGEMENT_EXAMPLES.md  STATE_MANAGEMENT_PATTERNS.md  STATE_STORAGE_ANALYSIS.md  TECHNICAL_PITCH.md  TEMPLATE_BACKEND.md  TEMPLATE_RESOLUTION.md  TESTING.md  TESTING_PAGES.md  TODO_TEMPLATE_REVERSED_FILTER.md  (+13 more)
docs/ai/: README.md  (+8 more)
examples/: breadcrumb_example.py  divider_demo.py  dj_confirm_demo.py  live_form_demo.py  liveview_stub_demo.py  range_component_demo.py  rust_components_demo.py  streaming_demo.py  stub_demo.py  test_textarea_component.py  textarea_benchmark.py  textarea_example.py
examples/demo_project/crates/djust_components/: Cargo.toml
examples/demo_project/crates/djust_components/src/: badge.rs  button.rs  lib.rs
k8s/: build.sh  deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  secrets.yaml.template
scripts/: AUDIT_TEMPLATE.md  README.md  audit-pipeline-bypass.py  auto_feature_dev.sh  auto_phase_dev.sh  bench_sync_to_async_overhead.py  build-client.sh  check-adr-status.py  check-bundle-init-order.mjs  check-changelog-tagged-sections.py  check-changelog-test-counts.py  check-cross-iife-refs.mjs  check-dev-env-imports.py  check-doc-snippets.py  check-handler-contracts.py  check-lockfile-versions.py  check-no-comma-list-closes.py  check-no-dead-private-methods.py  check-noqa-f822.sh  check-test-coverage.py  ci_djust_check_demo.py  codeql-triage.sh  docs-lint.py  doctor.sh  embeddable-python.sh  gen_vdom_diff_fixtures.py  git-commit-with-precommit.sh  open_intellij.sh  parse_markdown_spec.sh  profile-request-path.py  profile_liveview.py  rebrand_to_djust.sh  report_theme_contrast.py  roadmap-lint.py  run-with-venv-python.sh
tests/: __init__.py  api_test_urls_custom.py  api_test_urls_default.py  api_test_urls_unmounted.py  conftest.py  gallery_test_urls.py  manual_verification_reset_form.py  route_map_auth_test_urls.py  route_map_test_urls.py  settings.py  test_changelog_tagged_sections.py  test_changelog_test_counts.py  test_check_adr_status.py  test_check_doc_snippets.py  test_check_handler_contracts.py  test_check_lockfile_versions.py  test_ci_djust_check_demo.py  test_critical_css.py  test_git_commit_with_precommit.py  test_query_optimizer.py  test_query_optimizer_integration.py  test_run_with_venv_python.py  test_rust_vdom_safe_diff_783.py
(+2238 files in other folders)
