[workspace]
members = [
    "crates/djust_core",
    "crates/djust_templates",
    "crates/djust_vdom",
    "crates/djust_live",
    "crates/djust_components",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["djust contributors"]
license = "MIT"
repository = "https://github.com/johnrtipton/djust"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for binary serialization
tokio = { version = "1.40", features = ["full"] }
ahash = "0.8"  # Faster hashing
dashmap = "6.1"  # Concurrent HashMap for template caching
smallvec = "1.13"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
quick-xml = "0.36"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
chrono = "0.4"  # DateTime handling for timesince filter

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
