[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "djust"
version = "0.4.3"
description = "Phoenix LiveView-style reactive components for Django with Rust-powered performance. Real-time UI updates over WebSocket, no JavaScript build step required."
authors = [{name = "djust contributors"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["django", "rust", "reactive", "server-side-rendering", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=4.2.29",
    "channels[daphne]>=4.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
compression = [
    "zstandard>=0.22.0",  # zstd compression for state backend
]
performance = [
    "orjson>=3.10.15; python_version == '3.9'",  # Best available for 3.9
    "orjson>=3.11.6; python_version >= '3.10'",  # CVE fix for 3.10+
    "zstandard>=0.22.0",
]
deploy = [
    "click>=8.0",
    "requests>=2.28",
]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",  # Parallel test execution
    "pytest-benchmark>=4.0.0",  # Performance benchmarking
    "black>=24.10.0; python_version == '3.9'",  # Best available for 3.9
    "black>=26.3.1; python_version >= '3.10'",  # CVE fix for 3.10+
    "ruff>=0.1",
    "mypy>=1.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "watchdog>=3.0.0",  # File system monitoring for hot reload
    "zstandard>=0.22.0",  # Compression support
    "orjson>=3.10.15; python_version == '3.9'",  # Best available for 3.9
    "orjson>=3.11.6; python_version >= '3.10'",  # CVE fix for 3.10+
    "click>=8.0",  # Deploy CLI
    "requests>=2.28",  # Deploy CLI
    "requests-mock>=1.11",  # HTTP mocking for deploy CLI tests
]

[project.scripts]
djust = "djust.cli:main"
djust-deploy = "djust.deploy_cli:cli"

[project.urls]
Homepage = "https://djust.org"
Documentation = "https://djust.org/quickstart/"
Repository = "https://github.com/djust-org/djust"
Issues = "https://github.com/djust-org/djust/issues"
Changelog = "https://github.com/djust-org/djust/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "djust._rust"
python-source = "python"
bindings = "pyo3"
manifest-path = "crates/djust_live/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["python/tests", "tests/unit", "tests/e2e", "tests/integration"]
pythonpath = [".", "examples/demo_project"]
DJANGO_SETTINGS_MODULE = "demo_project.settings"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/playwright",  # Manual tests, not for CI
    "--ignore=tests/js",  # JavaScript tests run with npm test
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmarks (run with pytest-benchmark)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
# Skip mark_safe warnings in components - this is a templating framework
# where mark_safe is expected and safe (content comes from trusted templates)
exclude_dirs = ["tests", "python/tests", "python/djust/tests"]
skips = ["B703", "B308"]  # mark_safe is expected in templates

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
    "ujson>=5.12.0",
    "pyopenssl>=26.0.0",
    "pyasn1>=0.6.3",
]

[tool.bandit.per_file_ignores]
# In components, mark_safe is used for trusted template output
"python/djust/components/*" = ["B703", "B308"]
"python/djust/live_view.py" = ["B703", "B308"]
