[package]
name = "django_rust_vdom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
ahash.workspace = true
smallvec.workspace = true
html5ever.workspace = true
markup5ever_rcdom.workspace = true
thiserror.workspace = true
regex.workspace = true
django_rust_core = { path = "../django_rust_core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
