[package]
name = "djust_components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "djust_components"
crate-type = ["rlib"]

[dependencies]
djust_core = { path = "../djust_core" }
pyo3 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
once_cell.workspace = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
