[package]
name = "djust_live"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "djust_live"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
ahash.workspace = true
dashmap.workspace = true
once_cell.workspace = true
djust_core = { path = "../djust_core" }
djust_templates = { path = "../djust_templates" }
djust_vdom = { path = "../djust_vdom" }
djust_components = { path = "../djust_components", features = ["python"] }
