[package]
name = "djust_live"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
dashmap.workspace = true
once_cell.workspace = true

# Local dependencies
djust_core = { path = "../djust_core" }
djust_templates = { path = "../djust_templates" }
djust_vdom = { path = "../djust_vdom" }
djust_components = { path = "../djust_components" }
