[package]
name = "djust_components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "djust_components"
crate-type = ["rlib"]
